JPEGImageDecoder: Set frame alpha state before marking a frame complete https://bugs.webkit.org/show_bug.cgi?id=82428

Reviewed by Kenneth Russell.

r109779 changed JPEG alpha channel handling by marking a JPEG image frame
as having no alpha _after_ setting the image status frame-complete, which
prevents the application of image color profiles in some WebGL cases.

No new tests. The application of the color profile is not guaranteed for
images used as textures in WebGL. Refer to http://wkb.ug/76498.

* platform/image-decoders/jpeg/JPEGImageDecoder.cpp:
(WebCore::JPEGImageDecoder::jpegComplete): Set the image frame alpha state
before marking the image frame status as frame-complete.


Canonical link: https://commits.webkit.org/99901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112493 268f45cc-cd09-0410-ab3c-d52691b4dbfc